[package]
name = "wish_wall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
borsh = { version = "1.4.0", features = ["derive"] }
solana-program = "=1.17.25"
[lib]
name = "wish_wall"
crate-type = ["cdylib", "lib"]